--- a/index.html
+++ b/index.html
@@ -220,6 +220,11 @@
                             <i class="bi bi-info-circle me-2"></i> No transactions yet. Send a transaction to see it here.
                         </div>
                         <div id="transaction-history" class="d-none">
+                            <div class="d-flex justify-content-end mb-3">
+                                <button id="clear-history" class="btn btn-sm btn-outline-danger">
+                                    <i class="bi bi-trash me-1"></i> Clear History
+                                </button>
+                            </div>
                             <div class="table-responsive">
                                 <table class="table table-striped">
                                     <thead>
@@ -228,6 +233,8 @@
                                             <th>Recipient</th>
                                             <th>Value</th>
                                             <th>Status</th>
+                                            <th>Date</th>
+                                            <th>Actions</th>
                                         </tr>
                                     </thead>
                                     <tbody id="transaction-list">
