--- a/index.html
+++ b/index.html
@@ -16,7 +16,158 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.8.0/web3.min.js"></script>
 </head>
 <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <header class="bg-dark text-white p-3">
+        <div class="container">
+            <div class="d-flex justify-content-between align-items-center">
+                <h1><i class="bi bi-shield-lock-fill me-2"></i>Seismic Transaction Sender</h1>
+                <div id="wallet-status" class="d-flex align-items-center">
+                    <span id="network-badge" class="badge bg-secondary me-2">Not Connected</span>
+                    <span id="wallet-address" class="d-none d-md-block text-truncate me-2" style="max-width: 200px;">Connect your wallet</span>
+                    <button id="connect-wallet" class="btn btn-primary">Connect Wallet</button>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main class="container py-5">
+        <div class="row">
+            <div class="col-md-6 mb-4">
+                <div class="card shadow-sm">
+                    <div class="card-header bg-primary text-white">
+                        <h3 class="card-title mb-0">Network Information</h3>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                Network
+                                <span id="network-name" class="badge bg-info">Seismic Devnet</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                Chain ID
+                                <span id="chain-id">5124</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                Native Token
+                                <span id="token-symbol">ETH</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                Status
+                                <span id="connection-status" class="badge bg-secondary">Not Connected</span>
+                            </li>
+                        </ul>
+                        <div class="mt-3">
+                            <button id="add-network" class="btn btn-outline-primary w-100">Add Seismic Network to Wallet</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 mb-4">
+                <div class="card shadow-sm">
+                    <div class="card-header bg-primary text-white">
+                        <h3 class="card-title mb-0">Wallet Information</h3>
+                    </div>
+                    <div class="card-body">
+                        <div class="mb-3">
+                            <label class="form-label">Your Address</label>
+                            <div class="input-group">
+                                <input id="user-address" type="text" class="form-control" readonly placeholder="Connect your wallet">
+                                <button class="btn btn-outline-secondary" type="button" id="copy-address">
+                                    <i class="bi bi-clipboard"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">Balance</label>
+                            <div class="input-group">
+                                <input id="user-balance" type="text" class="form-control" readonly placeholder="--">
+                                <span class="input-group-text">ETH</span>
+                                <button class="btn btn-outline-secondary" type="button" id="refresh-balance">
+                                    <i class="bi bi-arrow-clockwise"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="mt-3">
+                            <a id="faucet-link" href="https://faucet-2.seismicdev.net/" target="_blank" class="btn btn-outline-info w-100">Get Test ETH from Faucet</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="col-lg-8 mx-auto">
+                <div class="card shadow-sm">
+                    <div class="card-header bg-primary text-white">
+                        <h3 class="card-title mb-0">Send Transaction</h3>
+                    </div>
+                    <div class="card-body">
+                        <form id="transaction-form">
+                            <div class="mb-3">
+                                <label for="recipient-address" class="form-label">Recipient Address (Optional)</label>
+                                <input type="text" class="form-control" id="recipient-address" placeholder="0x... (leave empty to send to your own wallet)">
+                            </div>
+                            <div class="mb-3">
+                                <label for="amount" class="form-label">Amount (ETH)</label>
+                                <input type="number" class="form-control" id="amount" placeholder="0.01" step="0.0001" min="0">
+                            </div>
+                            <div class="mb-3">
+                                <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" id="enable-encryption" checked>
+                                    <label class="form-check-label" for="enable-encryption">Use Seismic Encryption</label>
+                                </div>
+                                <small class="form-text text-muted">When enabled, transaction data will be encrypted using Seismic's privacy technology</small>
+                            </div>
+                            <div class="mb-3">
+                                <label for="encrypted-data" class="form-label">Optional Encrypted Data (hex)</label>
+                                <textarea class="form-control" id="encrypted-data" rows="3" placeholder="0x..."></textarea>
+                                <small class="form-text text-muted">Add encrypted data to your transaction (advanced)</small>
+                            </div>
+                            
+                            <div class="d-grid">
+                                <button type="submit" class="btn btn-success btn-lg" id="send-transaction">Send Transaction</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- Transaction details modal -->
+    <div class="modal fade" id="tx-details-modal" tabindex="-1" aria-labelledby="tx-details-modal-label" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="tx-details-modal-label">Transaction Details</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="tx-details-content">
+                    <!-- Transaction details will be shown here -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Loading overlay -->
+    <div id="loading-overlay" class="position-fixed top-0 start-0 w-100 h-100 d-none" style="background: rgba(0,0,0,0.5); z-index: 9999;">
+        <div class="d-flex justify-content-center align-items-center h-100">
+            <div class="card p-4 text-center">
+                <div class="spinner-border text-primary mb-3" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+                <h5 id="loading-text">Processing Transaction...</h5>
+            </div>
+        </div>
+    </div>
+
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="seismic-config.js"></script>
+    <script src="seismic-sdk.js"></script>
+    <script src="app.js"></script>
 </body>
 </html> 
