--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.8.0/web3.min.js"></script>
     
-    <!-- Web3-Onboard Libraries -->
-    <script src="https://unpkg.com/@web3-onboard/core@2.20.4/dist/index.global.js"></script>
-    <script src="https://unpkg.com/@web3-onboard/injected-wallets@2.10.1/dist/index.global.js"></script>
-    <script src="https://unpkg.com/@web3-onboard/walletconnect@2.4.2/dist/index.global.js"></script>
+    <!-- Web3Modal and wallet providers -->
+    <script src="https://unpkg.com/web3modal@1.9.12/dist/index.js"></script>
+    <script src="https://unpkg.com/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
+    <script src="https://unpkg.com/fortmatic@2.4.0/dist/fortmatic.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@coinbase/wallet-sdk@3.6.0/dist/index.min.js"></script>
 </head>
 <body>
     <header class="bg-dark text-white p-3">
@@ -335,9 +336,7 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="seismic-config.js"></script>
-    <script src="onboard.js"></script>
     <script src="seismic-sdk.js"></script>
-    <script src="seismic-animation.js"></script>
     <script src="app.js"></script>
 </body>
 </html> 
