--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="seismic-config.js"></script>
+    <script src="wallet-connector.js"></script>
     <script src="seismic-sdk.js"></script>
     <script src="app.js"></script>
 </body>
