Добавить кнопку отключения кошелька и обновить UI Web3Modal

--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
                     <span id="network-badge" class="badge bg-secondary me-2">Not Connected</span>
                     <span id="wallet-address" class="d-none d-md-block text-truncate me-2" style="max-width: 200px;">Connect your wallet</span>
                     <button id="connect-wallet" class="btn btn-primary">Connect Wallet</button>
+                    <button id="disconnect-wallet" class="btn btn-outline-danger ms-2 d-none">Disconnect</button>
                 </div>
             </div>
         </div>
