--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
     <script>
         console.log('Loading WalletConnect libraries...');
     </script>
-    <script src="libs/ethereum-provider.min.js" 
+    <script src="https://unpkg.com/@walletconnect/ethereum-provider@2.9.2/dist/index.umd.js" 
             onload="console.log('EthereumProvider script loaded')"
             onerror="console.error('Failed to load EthereumProvider script')"></script>
             
-    <script src="libs/web3modal.min.js"
+    <script src="https://unpkg.com/@web3modal/standalone@2.4.3/dist/index.umd.js"
             onload="console.log('Web3Modal script loaded')" 
             onerror="console.error('Failed to load Web3Modal script')"></script>
     
