--- a/app.html
+++ b/app.html
@@ -14,10 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     
-    <!-- Meta tags for security -->
-    <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    <meta http-equiv="X-Frame-Options" content="DENY">
-    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    <!-- Meta tags for Cross-Origin policies -->
     <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups">
     
     <style>
