--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     
-    <!-- Meta tags for security -->
-    <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    <meta http-equiv="X-Frame-Options" content="DENY">
-    <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+    <!-- Meta tags for Cross-Origin policies -->
     <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups">
     
     <style>
